[tool.poetry]
package-mode = false
name = "caraml-examples"
version = "0.1.0"
description = "Example usages of caramlops tooling"
authors = []
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
caraml = { path = "../caraml/", develop = true }
torch = "^2.5.1"
torchvision = "^0.20.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
